fixed an issue where the bg image was not covering properly on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
 body {
     font-family: 'Lato', sans-serif;
     background-image: url("https://wallpaperplay.com/walls/full/c/a/8/396500.jpg");
-    background-position: 0px 0px;
+    background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     
